# ai-clone-whatsapp

./: .gitignore  README.md  chat.py  commandline_chatbot.py  custom_dataset.py  finetuning.py  preprocess.py  pyproject.toml  train.py
config/: custom_config.yaml
config/llama3/: inference_config.yaml  qlora_train_config.yaml  train_config.yaml
config/mistral/: inference_config.yaml  qlora_train_config.yaml  quantization.yaml
configs/: __init__.py  datasets.py  training.py
data/preprocessed/: example_chat.json
data/preprocessing/: preprocess.py
data/preprocessing/processed_chats/train/: example_train_chats.csv
data/preprocessing/processed_chats/validation/: example_validation_chats.csv
data/preprocessing/raw_chats/validation/: example_chat_file.txt
data/raw_data/: example_chat.txt
inference/: checkpoint_converter_fsdp_hf.py  model_utils.py
model_checkpointing/: __init__.py
policies/: __init__.py
scripts/: custom_dataset.py
utils/: __init__.py  config_utils.py  dataset_utils.py  train_utils.py
